@@ -1,9 +1,8 @@
 package Datahub::Factory::Exporter::Datahub;
 
-use strict;
-use warnings;
-
 use Datahub::Factory::Sane;
+
+our $VERSION = '1.70';
 
 use Moo;
 use Catmandu;
