@@ -2,10 +2,12 @@ package Datahub::Factory::Flash;
 
 use Datahub::Factory::Sane;
 
+our $VERSION = '1.70';
+
 use Moo::Role;
 use MooX::Aliases;
-use namespace::clean;
 use Term::ANSIColor qw(:constants);
+use namespace::clean;
 
 has verbose => ( is => 'rw' );
 
