@@ -1,10 +1,12 @@
 package Datahub::Factory::Importer::CollectiveAccess;
 
-use strict;
-use warnings;
+use Datahub::Factory::Sane;
+
+our $VERSION = '1.70';
 
 use Moo;
 use Catmandu;
+use namespace::clean;
 
 with 'Datahub::Factory::Importer';
 
